k8s/standard/superset-webserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: superset-webserver-svc
spec:
  selector:
    app: superset
    unit: webserver
  ports:
  - port: 8088
    targetPort: 8088
  type: ClusterIP
